log
Fri Mar 18 00:31:31 UTC 2022: 
 tests:  0|6
total_score: 0/70
bac1a11
Fri Mar 18 00:32:38 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:37: error: ‘Lista’ undeclared (first use in this function); did you mean ‘List’?
   List * l = (List*) malloc (sizeof(Lista));
                                     ^~~~~
                                     List
list.c:32:37: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
9e2db33
Fri Mar 18 00:32:44 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e8f60ed
Fri Mar 18 00:39:48 UTC 2022: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:36:13: error: ‘l’ undeclared (first use in this function)
      return l;
             ^
list.c:36:13: note: each undeclared identifier is reported only once for each function it appears in
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
831adb6
Fri Mar 18 00:39:55 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
de7f67b
Fri Mar 18 00:41:37 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9390b0c
Fri Mar 18 00:45:00 UTC 2022: 
 list.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
a2466bd
Fri Mar 18 00:45:27 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
eedf3b4
Fri Mar 18 00:46:09 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e4f146a
Fri Mar 18 00:46:21 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
8f4871c
Fri Mar 18 00:47:05 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
076d631
Fri Mar 18 00:49:31 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function ‘nextList’:
list.c:53:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
8faeee0
Fri Mar 18 00:49:47 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
e4a6566
Fri Mar 18 00:50:02 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3981bcb
Fri Mar 18 00:50:30 UTC 2022: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
e3aa4a5
Fri Mar 18 00:50:47 UTC 2022: 
 list.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  2|5
total_score: 15/70
0ab919d
Fri Mar 18 00:50:55 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
703fd53
Fri Mar 18 00:51:05 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
34c102b
Fri Mar 18 00:51:57 UTC 2022: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 25/70
ed20c7b
Fri Mar 18 00:53:50 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
294bdad
Fri Mar 18 00:55:11 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘lastList’:
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
abbdfda
Fri Mar 18 00:55:59 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
680cefb
Fri Mar 18 00:56:14 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3c70c4f
Fri Mar 18 00:57:11 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
de9e1d8
Fri Mar 18 01:02:16 UTC 2022: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘pushFront’:
list.c:64:28: error: ‘return’ with a value, in function returning void [-Werror]
   if (list == NULL) return NULL;
                            ^~~~
list.c:63:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a03aa33
Fri Mar 18 01:02:35 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d4f4479
Fri Mar 18 01:04:15 UTC 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
01ace23
Fri Mar 18 01:04:56 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  10|2
total_score: 45/70
e89be7a
Fri Mar 18 01:15:03 UTC 2022: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c:73:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
     list->head = nodriz;
         ^~
list.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
320d78c
Fri Mar 18 01:15:09 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
06dcf38
Fri Mar 18 01:16:34 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
d729545
Fri Mar 18 01:16:43 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ba9e339
Fri Mar 18 01:16:51 UTC 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
617f9b4
Fri Mar 18 01:17:08 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
8bb988f
Fri Mar 18 01:17:18 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
8e02700
Fri Mar 18 01:17:49 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
070a952
